Fix options formatting on Firefox

--- a/public/game.css
+++ b/public/game.css
@@ -147,7 +147,8 @@ dialog > div {
 }
 
 #optionsDialog form {
-  > * {
+  > *,
+  legend {
     display: block;
   }
 
